# evolvex1

./: .env  .gitignore  README.md  pyproject.toml  report.md
src/evolvex/: crew.py  index.html  main.py
src/evolvex/ENV/: pyvenv.cfg
src/evolvex/ENV/Scripts/: activate  activate.bat
